--- a/src/ThingsGateway.Gateway.Razor/Pages/Config/Device/DevicePage.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Config/Device/DevicePage.razor
@@ -46,7 +46,7 @@
 
         </TableColumns>
         <EditTemplate Context="context">
-            <DeviceEditComponent Model=context PluginType=PluginType PluginNames="PluginNames" DeviceDict=DeviceDict RedundantDevicesQuery="OnRedundantDevicesQuery"></DeviceEditComponent>
+            <DeviceEditComponent Model=context PluginType=PluginType PluginNames="PluginNames"  PluginDcit="PluginDcit" DeviceDict=DeviceDict RedundantDevicesQuery="OnRedundantDevicesQuery"></DeviceEditComponent>
         </EditTemplate>
 
 
