--- a/src/ThingsGateway.Gateway.Razor/Pages/Config/Plugin/PluginPage.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Config/Plugin/PluginPage.razor
@@ -17,10 +17,11 @@
                 ShowExportButton="true" ShowAdvancedSearch=false SearchModel=SearchModel
                 OnQueryAsync="OnQueryAsync">
 
-        @*         <TableToolbarTemplate>
-        <TableToolbarButton TItem="PluginOutput" Color="Color.Info" Icon="fa fa-plus" Text="@DefaultLocalizer["Add"]"
-        OnClickCallback="OnAdd" IsShow=@(AuthorizeButton("添加")) />
-        </TableToolbarTemplate> *@
+        <TableToolbarTemplate>
+            <TableToolbarButton TItem="PluginOutput" Color="Color.Info" Icon="fa fa-plus" Text="@DefaultLocalizer["Add"]"
+                                OnClickCallback="OnAdd" IsShow=@(AuthorizeButton("添加")) />
+
+        </TableToolbarTemplate>
         <TableColumns>
             <TableColumn @bind-Field="@context.Name">
                 <Template Context="name">
