修复：更新依赖包，修复脚本编辑框无法显示的问题

--- a/src/ThingsGateway.Gateway.Razor/Pages/Config/Device/DeviceEditComponent.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Config/Device/DeviceEditComponent.razor
@@ -258,7 +258,7 @@ else
             {
                 if (PropertyUIType == null)
                 {
-                    <BusinessPropertyWithCacheIntervalScriptRazor Model="Model" PluginPropertyEditorItems="PluginPropertyEditorItems" />
+                    <BusinessPropertyWithCacheIntervalScriptRazor @key=Model.PluginName Model="Model" PluginPropertyEditorItems="PluginPropertyEditorItems" />
                 }
                 else
                 {
