--- a/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Runtime/DeviceStatus/DeviceStatus2.razor
+++ b/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Runtime/DeviceStatus/DeviceStatus2.razor
@@ -77,22 +77,23 @@
 
                                 <EditTemplate Context="value">
                                     <div class="col-12  col-md-12">
+
                                         <Textarea @bind-Value=@businessProperty.BigTextScriptDeviceModel ShowLabelTooltip="true"
-                                                  rows="5" ShowLabel="true" />
+                                                  rows="5" ShowLabel="true" IsDisabled />
                                         <div class="ms-2 d-flex justify-content-center align-items-center">
                                        
                                         </div>
                                     </div>
                                     <div class="col-12  col-md-12">
                                         <Textarea @bind-Value=@businessProperty.BigTextScriptVariableModel ShowLabelTooltip="true"
-                                                  rows="5" ShowLabel="true" />
+                                                  rows="5" ShowLabel="true" IsDisabled />
                                         <div class="ms-2 d-flex justify-content-center align-items-center">
                                         
                                         </div>
                                     </div>
                                     <div class="col-12  col-md-12">
                                         <Textarea @bind-Value=@businessProperty.BigTextScriptAlarmModel ShowLabelTooltip="true"
-                                                  rows="5" ShowLabel="true" />
+                                                  rows="5" ShowLabel="true" IsDisabled  />
                                         <div class="ms-2 d-flex justify-content-center align-items-center">
                                   
                                         </div>
