更新依赖包，雪花ID方法

--- a/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Runtime/DeviceStatus/DeviceStatus1.razor
+++ b/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Runtime/DeviceStatus/DeviceStatus1.razor
@@ -4,6 +4,7 @@
 @using ThingsGateway.Debug
 @using ThingsGateway.Gateway.Application
 @using ThingsGateway.Extension
+@using ThingsGateway.Extension.Generic
 @inherits ComponentDefault
 
 <div class="device">
